--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,18 +1,26 @@
 .navbar {
     background: #C20C19;
+    width: 100vw;
     height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: all 0.3s linear;
 }
 
-.navbar slide{
-    width: 50%;
-    background-color: aqua;
+.navbar.slide{
+    width: calc(100% - 250px);
+    transition: all 0.3s linear;
 }
 
 .title {
     color: white;
+}
+
+.name {
+    font-size: 20px;
+    color: black;
+    padding-right: 20px;
 }
 
 .menu-bars {
@@ -26,11 +34,11 @@
     width: 250px;
     height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     position: fixed;
     top: 0;
     right: -500px;
-    transition: 850ms;
+    transition: all 500ms linear;
     z-index: 1;
 }
 
@@ -43,7 +51,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
-    padding: 8px 0 8px 16px;
+    padding: 8px 80px 0px 0px;
     list-style: none;
     height: 60px;
 }
@@ -79,4 +87,18 @@
 span {
     margin-left: 16px;
 }
+
+/* @media (min-width: 1450px) {
+    .navbar.slide{
+        width: 90%;
+        transition: all 0.3s linear;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1449px) {
+    .navbar.slide{
+        width: 80%;
+        transition: all 0.3s linear;
+    }
+} */
 
