--- a/src/components/Cardc/Cardc.css
+++ b/src/components/Cardc/Cardc.css
@@ -1,7 +1,12 @@
 .cardc {
-  border-radius: 100px;
+  border-radius: 15px;
   margin: 10px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.cardc:hover {
+  cursor: pointer;
+  background-color: rgb(224, 224, 224);
 }
 
 .cardc-img {
