--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@
     transition: all 0.3s linear;
 }
 
-.navbar.slide{
+.navbar.slide {
     width: calc(100% - 250px);
     transition: all 0.3s linear;
 }
@@ -21,6 +21,7 @@
     font-size: 20px;
     color: black;
     padding-right: 20px;
+    text-align: center;
 }
 
 .menu-bars {
@@ -30,11 +31,13 @@
 }
 
 .sidebar {
-    background-color: white;
+    background-color: rgb(245, 245, 245);
     width: 250px;
     height: 100vh;
     display: flex;
-    justify-content: end;
+    flex-direction: column;
+    justify-content: start;
+    align-items: flex-start;
     position: fixed;
     top: 0;
     right: -500px;
@@ -49,34 +52,35 @@
 
 .nav-text {
     display: flex;
-    justify-content: start;
-    align-items: center;
-    padding: 8px 80px 0px 0px;
+    width: 100%;
+    padding: 8px 20px 0px 0px;
     list-style: none;
     height: 60px;
 }
 
 .nav-text a {
-   text-decoration: none;
-   color: black;
-   font-size: 18px;
-   width: 95%;
-   height: 100%;
-   display: flex;
-   align-items: center;
-   padding: 0 16px;
-   border-radius: 4px;
+    background-color: rgb(235, 235, 235);
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 16px;
+    border-radius: 5px;
 }
 
-.nav-text a:hover  {
-    background-color: lightgray;
+.nav-text a:hover {
+    background-color: rgb(201, 201, 201);
+    color: black;
 }
 
 .nav-menu-items {
     width: 100%;
 }
 
-.navbar-toggle {
+.navbar-display {
     width: 100%;
     height: 80px;
     display: flex;
@@ -101,4 +105,3 @@ span {
         transition: all 0.3s linear;
     }
 } */
-
