--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,10 +1,6 @@
-.content {
-    width: 500;
-    height: 500;
-    display: block;
-    margin-top: 240px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.contenedor {
+    display: grid;
+    place-items: center;
     opacity: .5;
+    height: 600px;
 }
