--- a/src/components/Cardc/Card.css
+++ b/src/components/Cardc/Card.css
@@ -1,52 +1,3 @@
-/* .group {
-  display: flex;
-  align-items: ;
-}
-
-.cardc {
-  display: flex;
-  width: 220px;
-  max-width: 250px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 15px;
-  margin: 10px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
-.cardc:hover {
-  cursor: pointer;
-  background-color: rgb(224, 224, 224);
-}
-
-.cardc-img {
-  max-width: 80px;
-  min-height: 80px;
-  object-fit: contain;
-  justify-content: center;
-  align-items: center;
-  padding: 5px 0 0 0;
-}
-
-.logo-company {
-  width: 140px;
-  height: 100px;
-  object-fit: contain;
-}
- */
-
-/* .container-card {
-  padding: 40px 20px 20px 20px;
-  width: 99%;
-  margin: auto;
-  flex-wrap: wrap;
-  display: flex;
-  justify-content: space-between;
-  justify-content: center;
-  flex-wrap: wrap;
-} */
-
 .card_item {
   padding: 15px 25px;
   box-sizing: content-box;
@@ -66,7 +17,7 @@
 }
 
 .card_inner:hover {
-  border: 1px solid rgb(201, 201, 201);
+  border: 0.01px solid rgb(201, 201, 201);
   transition: transform .3s;
 }
 
@@ -79,7 +30,7 @@
   transition: transform .2s;
 }
 
-.userName {
+.card-name {
   color: #203150;
   font-weight: 600;
   font-size: 20px;
@@ -88,7 +39,7 @@
   text-overflow: ellipsis;
 }
 
-.userUrl {
+.url {
   font-size: 14px;
   font-weight: 100;
   margin: 5px 0 10px;
@@ -98,17 +49,8 @@
   white-space: nowrap;
 }
 
-.userUrl a {
+.url a {
   text-decoration: none;
-}
-
-.gitDetail {
-  flex: 1;
-  font-size: 14px;
-  line-height: 24px;
-  color: #7b8ca0;
-  display: flex;
-  flex-direction: column;
 }
 
 .detail-box {
@@ -126,6 +68,15 @@
   font-size: 14px;
   font-weight: 600;
   color: black;
+}
+
+.detail {
+  flex: 1;
+  font-size: 14px;
+  line-height: 24px;
+  color: #7b8ca0;
+  display: flex;
+  flex-direction: column;
 }
 
 .seeMore {
